<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient"
    tools:context=".SplashActivity">

    <!-- Logo chính (ic_money_circle) -->
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_money_circle"
        android:contentDescription="@string/content_description_app_logo"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:alpha="1.0" />

    <!-- Tên ứng dụng -->
    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen_title"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0.0"
        tools:alpha="1.0"/>

    <!-- ProgressBar vòng xoay -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@android:color/white"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/content_description_loading_bar"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0.0"
        tools:alpha="1.0"/>

    <!-- Icon trang trí (ic_coin_small) góc dưới bên phải -->
    <ImageView
        android:id="@+id/iv_decoration_coin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_coin_small"
        android:contentDescription="Icon trang trí đồng xu"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0.0"
        tools:alpha="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>